@@ -1,3 +1,3 @@
 module Heirloom
-  VERSION = "0.4.0"
+  VERSION = "0.4.1"
 end
