@@ -22,6 +22,7 @@ describe Heirloom do
                            :name => 'archive_name',
                            :config => @config_mock).
                       and_return @archive_mock
+    @archive_mock.should_receive(:domain_exists?).and_return true
     @cli_destroy = Heirloom::CLI::Destroy.new
   end
 
