@@ -1,3 +1,7 @@
+## XXX:
+
+* Added check to verify domain exists for all cmds except build
+
 ## v0.4.0:
 
 * Prefixing domain name with heirloom_
